# BITstar

./: CMakeLists.txt  Config_.py  README.md
BITstar6D/: BIT_Star.py  Node.py  new_main.py
Bullet/: Module_PyBullet_CollisionOnly.py
include/: BatchInformedTree.h  WorkingSpace.h
src/: BatchInformedTree.cpp  CMakeLists.txt  WorkingSpace.cpp  main.cpp
